--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
         "v2.9"
     ],
     "website": "https://youtube.com/channel/UCmGBpXoM-OEm-FacOccVKgQ",
-    "repository": "https://github.com/PR0FESS0R-99/DonLee_Robot/tree/MoTech",
+    "repository": "https://github.com/thilak200318/NEW-AUTO-FILTER-BOT-V2.9/edit/main/app.json",
     "success_url": "https://youtube.com/channel/UCmGBpXoM-OEm-FacOccVKgQ",
     "env": {
         "APP_ID": {
